- Added Blackhoof Armaments to the loot table of Grimtotem Elder for the quests Arms of the Grimtotems and More than Coincidence.
- Changed flags of Blackhoof Armaments to allow every member of a group to loot it.
- Changed flags of Grimtotem Note to allow every member of a group to loot it.

[2022-03-08]
- Added Gooey Ghoul Drool to the loot table of Decaying Ghoul for the quest You Can Run, But You Can't Hide and Silver Lining.
- Added Scourge Scrap Metal to the loot table of Vargul Deathwaker for the quest Making Something Out Of Nothing.
- Added Scourge Scrap Metal to the loot table of Vargul Runelord for the quest Making Something Out Of Nothing.
- Added Scourge Scrap Metal to the loot table of Vargul Slayer for the quest Making Something Out Of Nothing.
- Added Scourge Scrap Metal to the loot table of Vargul Blighthound for the quest Making Something Out Of Nothing.
- Added Basilisk Crystals to the loot table of Lurking Basilisk for the quest Gluttonous Lurkers.
- Added Dead Thornwood to the loot table of Lurking Basilisk for the quests Troll Patrol: Creature Comforts and Creature Comforts.
- Changed flags of Gooey Ghoul Drool to allow every member of a group to loot it.
- Changed flags of Scourge Scrap Metal to allow every member of a group to loot it.
- Changed flags of Basilisk Crystals to allow every member of a group to loot it.
- Changed flags of Dead Thornwood to allow every member of a group to loot it.

- Changed the respawn time of Harvested Blight Crystal.

[2022-03-09]
- Added Muddlecap Fungus to the loot table of Lurking Basilisk for the quest Mushroom Mixer.
- Changed flags of Muddlecap Fungus to allow every member of a group to loot it.

[2022-03-16]
- Added Witchbane to the loot table of Risen Spirit for the quest The Witch's Bane.
- Added Witchbane to the loot table of Risen Husk for the quest The Witch's Bane.
- Changed flags of Witchbane to allow every member of a group to loot it.

- Changed the respawn time of Stonemaul Clan Banner.